Update all the things

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 
         <div class="row banner">
             <div class="banner-text">
-                <h1 class="responsive-headline">Hey, I'm Viseshprasad</h1>
-                <h3></h3>
-                <h3><span>I'm a former <strong>Mobile Application Developer</strong> and a current <strong>Computer Science Graduate student</strong> at <strong>UNC Charlotte</strong>, with work experience in <strong>Android application development</strong> and <strong>Linux system administration</strong>, seeking opportunities in software development.</span></h3>
+                <h1 class="responsive-headline">Hi, I'm Visesh!</h1>
+                <h3 class="responsive-headline"><span>I'm a former <strong>Software Developer/Programmer</strong> currently working as a <strong>DevOps Intern</strong> 
+                    at <strong>FireEye, Inc.</strong> while pursuing a <strong> master's degree in Computer Science</strong> at <strong>UNC Charlotte</strong>. With work experience in <strong>Web and Android application development</strong>, <strong>DevOps</strong> and <strong>Linux system administration</strong>, I am currently seeking full time opportunities in Software Development or DevOps.</span></h3>
                 <hr />
                 <ul class="social">
                     <li><a href="https://plus.google.com/u/0/+viseshprasad"><i class="fa fa-google-plus"></i></a></li>
@@ -96,10 +96,12 @@
 
                 <h2>About Me</h2>
 
-                <p>I'm a self-taught and dedicated software developer experienced in the creation of innovative, elegant and highly functional Android applications. I have over 10 months of work experience in the development of a popular Android application
-                    - HashLearn (India only) which has over 100,000 downloads and a 4.2 rating on Google Play. The application is focused on private tutoring and exam preparation for students. As a developer, I built several vital parts of the application
-                    such as user sign-up, login, payment flows and integration and maintenance of third party APIs and analytics. I also played an important role in the quality assurance of the application, testing and debugging conscientiously to make
-                    sure a flawless experience was delivered to the users. </p>
+                <p>I'm a self-taught Software Developer/Programmer and DevOps Engineer with over 2 years of industrial experience in the development of innovative and highly functional Web and Android applications as well as their deployment and maintenance. I am well versed in Java + Android, Python + Django, Javascript + Jquery, HTML and CSS. Having developed several Django and Java web applications from scratch and setting up servers running Apache Tomcat, NGINX, Gunicorn and Supervisor, I have also deployed them on private cloud servers using Jenkins, Docker, FPM package management, Artifactory, Rundeck, Fabric and Puppet. </p>
+                <p>
+                My academic experience includes several Android and web applications, cloud computing projects for data analysis using Hadoop/HDFS, MapReduce, Apache Spark and Machine Learning.
+                </p>
+                <p>All my personal projects can be found on 
+                    <a href="https://github.com/viseshrp" target="_blank">Github</a></p>.
 
                 <div class="row">
 
@@ -141,10 +143,10 @@
 
                         <h3>University of North Carolina at Charlotte<br />
                     Charlotte, USA </h3>
-                        <p class="info">Master of Science in Computer Science.<span>&bull;</span> <em class="date">May 2018</em><span>&bull;</span><em class="date">GPA : 3.75 (4)</em></p>
+                        <p class="info">Master of Science in Computer Science.<span>&bull;</span> <em class="date">May 2018</em><span>&bull;</span><em class="date">GPA : 3.8 (4)</em></p>
                         </p>
 
-                        <p><strong>Courses (Fall semester 2016):</strong> Algorithms & Data Structures, Software System Design & Implementation, Intelligent Systems, Database Systems. </p>
+                        <p><strong>Courses:</strong> Algorithms & Data Structures, Software System Design & Implementation, Intelligent Systems, Database Systems, Network-based Application Development, Cloud Computing for Data Analysis (Hadoop, Spark, Machine Learning), Artificial Intelligence in Computer Games, Modern Data Science (Neural Networks, Natural Language Processing). </p>
 
                     </div>
 
@@ -183,13 +185,39 @@
 
             <div class="nine columns main-col">
 
+                                <div class="row item">
+
+                    <div class="twelve columns">
+
+                        <h3>FireEye, Inc.</h3>
+                    <h5>Virginia, USA</h5>
+                        <p class="info">DevOps Intern<span>&bull;</span> <em class="date">May 2017 - present</em></p>
+
+                        <p>
+¬   Built a dashboard for internal use by software developers and QA, using Python, Django, PuppetDB, Javascript, jQuery, HTML5 and CSS3, to deploy applications onto servers and also manage large numbers of application servers from a web interface.<br>
+¬   Contributed to development of a dashboard for use by hardware engineers as a one-stop inventory for physical and virtual servers, using Python, Django, PostgreSQL, Javascript, jQuery, HTML5 and CSS3.<br>
+¬   Built the Django apps in Docker containers with Docker-compose for development and builds.<br>
+¬   Setup Gunicorn app server, NGINX proxy server with SSL and Supervisor, for the Django apps.<br>
+¬   Automated the entire build and deployment process of the Django apps using Jenkins, Docker, FPM Package management, Artifactory and Puppet.<br>
+¬   Facilitated deployment of apps and execution of remote tasks using Rundeck and Fabric.<br>
+¬   Pipelined and automated builds, tests and deployments with Jenkins and Docker for QA, Developers.<br>
+¬   Configured several servers with Puppet and Puppet DSL.<br>
+
+                        </p>
+
+                    </div>
+
+                </div>
+                <!-- item end -->
+
+
                 <div class="row item">
 
                     <div class="twelve columns">
 
-                        <h3>Hash Education Pvt. Ltd.<br />
-                    Bangalore, India</h3>
-                        <p class="info">Software Developer (Android)<span>&bull;</span> <em class="date">October 2015 - July 2016</em></p>
+                        <h3>Hash Education Pvt. Ltd.</h3>
+                    <h5>Bangalore, India</h5>
+                        <p class="info">Software Developer<span>&bull;</span> <em class="date">October 2015 - July 2016</em></p>
 
                         <p>
                             ¬ Worked in a team of three developers in the design and development (Scrum) of <a href="https://play.google.com/store/apps/details?id=com.hashlearn.now&hl=en">HashLearn</a>, an Android application with over 100,000 downloads
@@ -208,8 +236,8 @@
 
                     <div class="twelve columns">
 
-                        <h3>CSS Corp Pvt. Ltd.<br />
-                   Chennai, India</h3>
+                        <h3>CSS Corp Pvt. Ltd.</h3>
+                    <h5>Chennai, India</h5>
                         <p class="info">Assistant Systems Engineer<span>&bull;</span> <em class="date">November 2013 - November 2014</em></p>
 
                         <p>
@@ -247,15 +275,17 @@
                     <ul class="skills">
                         <li><span class="bar-expand css"></span><em>Java</em></li>
                         <li><span class="bar-expand css"></span><em>Android</em></li>
-                        <li><span class="bar-expand css"></span><em>Git</em></li>
-                        <li><span class="bar-expand css"></span><em>Linux</em></li>
-                        <li><span class="bar-expand illustrator"></span><em>XML</em></li>
-                        <li><span class="bar-expand wordpress"></span><em>Python</em></li>
+                        <li><span class="bar-expand jquery"></span><em>Python</em></li>
+                        <li><span class="bar-expand jquery"></span><em>Django</em></li>
+                        <li><span class="bar-expand jquery"></span><em>JavaScript</em></li>
+                        <li><span class="bar-expand jquery"></span><em>Jquery</em></li>
                         <li><span class="bar-expand photoshop"></span><em>CSS</em></li>
                         <li><span class="bar-expand html5"></span><em>HTML5</em></li>
-                        <li><span class="bar-expand photoshop"></span><em>JavaScript</em></li>
                         <li><span class="bar-expand jquery"></span><em>SQL</em></li>
-                        <li><span class="bar-expand css"></span><em>Bash</em></li>
+                        <li><span class="bar-expand css"></span><em>Git</em></li>
+                        <li><span class="bar-expand css"></span><em>Linux</em></li>
+                        <li><span class="bar-expand jquery"></span><em>Bash</em></li>
+
                     </ul>
 
                 </div>
