--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
                     <ul class="skills">
                         <li><span class="bar-expand css"></span><em>Java</em></li>
-                        <li><span class="bar-expand css"></span><em>Android</em></li>
+                        <li><span class="bar-expand jquery"></span><em>Android</em></li>
                         <li><span class="bar-expand jquery"></span><em>Python</em></li>
                         <li><span class="bar-expand jquery"></span><em>Django</em></li>
                         <li><span class="bar-expand jquery"></span><em>JavaScript</em></li>
@@ -282,7 +282,7 @@
                         <li><span class="bar-expand html5"></span><em>HTML5</em></li>
                         <li><span class="bar-expand jquery"></span><em>SQL</em></li>
                         <li><span class="bar-expand css"></span><em>Git</em></li>
-                        <li><span class="bar-expand css"></span><em>Linux</em></li>
+                        <li><span class="bar-expand jquery"></span><em>Linux</em></li>
                         <li><span class="bar-expand jquery"></span><em>Bash</em></li>
 
                     </ul>
