Revert "Remove "Projects" section for now"
This reverts commit c0fdd1831619c6477dda0b27a8b9ea786d587715.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
                 <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
                 <li><a class="smoothscroll" href="#about">About</a></li>
                 <li><a class="smoothscroll" href="#resume">Resume</a></li>
+                <li><a class="smoothscroll" href="#portfolio">Projects</a></li>
                 <li><a class="smoothscroll" href="#contact">Contact</a></li>
             </ul>
             <!-- end #nav -->
@@ -100,7 +101,7 @@
                 My academic experience includes several Android and web applications, cloud computing projects for data analysis using Hadoop/HDFS, MapReduce, Apache Spark and Machine Learning.
                 </p>
                 <p>All my personal projects can be found on 
-                    <a href="https://github.com/viseshrp" target="_blank">Github.</a></p>
+                    <a href="https://github.com/viseshrp" target="_blank">Github</a></p>.
 
                 <div class="row">
 
@@ -298,6 +299,177 @@
 
     </section>
     <!-- Resume Section End-->
+
+
+    <!-- Portfolio Section
+   ================================================== -->
+    <section id="portfolio">
+
+        <div class="row">
+
+            <div class="twelve columns collapsed">
+
+                <h1>Check Out Some of My Projects.</h1>
+
+                <!-- portfolio-wrapper -->
+                <div id="portfolio-wrapper" class="bgrid-quarters s-bgrid-thirds cf">
+
+                    <div class="columns portfolio-item">
+                        <div class="item-wrap">
+
+                            <a href="#modal-01" title="">
+                                <img alt="" src="images/hl.jpg">
+                                <div class="overlay">
+                                    <div class="portfolio-item-meta">
+                                        <h5>HashLearn Now</h5>
+                                        <p>Hash Education Pvt. Ltd.</p>
+                                    </div>
+                                </div>
+                                <div class="link-icon"><i class="icon-plus"></i></div>
+                            </a>
+
+                        </div>
+                    </div>
+                    <!-- item end -->
+
+                    <div class="columns portfolio-item">
+                        <div class="item-wrap">
+
+                            <a href="#modal-02" title="">
+                                <img alt="" src="images/nn.png">
+                                <div class="overlay">
+                                    <div class="portfolio-item-meta">
+                                        <h5>Notification Notes</h5>
+                                        <p>Pet project</p>
+                                    </div>
+                                </div>
+                                <div class="link-icon"><i class="icon-plus"></i></div>
+                            </a>
+
+                        </div>
+                    </div>
+                    <!-- item end -->
+
+                    <div class="columns portfolio-item">
+                        <div class="item-wrap">
+
+                            <a href="#modal-03" title="">
+                                <img alt="" src="images/chi.png">
+                                <div class="overlay">
+                                    <div class="portfolio-item-meta">
+                                        <h5>Community Health Indicator</h5>
+                                        <p>Graduate project</p>
+                                    </div>
+                                </div>
+                                <div class="link-icon"><i class="icon-plus"></i></div>
+                            </a>
+
+                        </div>
+                    </div>
+                    <!-- item end -->
+
+                    <div class="columns portfolio-item">
+                        <div class="item-wrap">
+
+                            <a href="#modal-04" title="">
+                                <img alt="" src="images/ttt.png">
+                                <div class="overlay">
+                                    <div class="portfolio-item-meta">
+                                        <h5>TicTacToeMinimax</h5>
+                                        <p>Graduate project</p>
+                                    </div>
+                                </div>
+                                <div class="link-icon"><i class="icon-plus"></i></div>
+                            </a>
+
+                        </div>
+                    </div>
+                    <!-- item end -->
+
+
+                    <div class="columns portfolio-item">
+                        <div class="item-wrap">
+
+
+                        </div>
+                        <!-- portfolio-wrapper end -->
+
+                    </div>
+                    <!-- twelve columns end -->
+
+
+                    <!-- Modal Popup
+	      --------------------------------------------------------------- -->
+
+                    <div id="modal-01" class="popup-modal mfp-hide">
+
+                        <img class="scale-with-grid" src="images/hl.jpg" alt="" />
+
+                        <div class="description-box">
+                            <h4>HashLearn Now</h4>
+                            <p>An android application focused on private tutoring and exam preparation for students.</p>
+                        </div>
+
+                        <div class="link-box">
+                            <a class="popup-modal-dismiss">Close</a>
+                        </div>
+
+                    </div>
+                    <!-- modal-01 End -->
+
+                    <div id="modal-02" class="popup-modal mfp-hide">
+
+                        <img class="scale-with-grid" src="images/nn.png" alt="" />
+
+                        <div class="description-box">
+                            <h4>Notification Notes</h4>
+                            <p>A simple open source Android app for saving quick notes in Android notifications.</p>
+                        </div>
+
+                        <div class="link-box">
+                            <a class="popup-modal-dismiss">Close</a>
+                        </div>
+
+                    </div>
+                    <!-- modal-02 End -->
+
+                    <div id="modal-03" class="popup-modal mfp-hide">
+
+                        <img class="scale-with-grid" src="images/chi.png" alt="" />
+
+                        <div class="description-box">
+                            <h4>Community Health Indicator</h4>
+                            <p>A health care app for Government health officials to view real time health data distribution.</p>
+                        </div>
+
+                        <div class="link-box">
+                            <a class="popup-modal-dismiss">Close</a>
+                        </div>
+
+                    </div>
+                    <!-- modal-03 End -->
+
+                    <div id="modal-04" class="popup-modal mfp-hide">
+
+                        <img class="scale-with-grid" src="images/ttt.png" alt="" />
+
+                        <div class="description-box">
+                            <h4>TicTacToeMinimax</h4>
+                            <p>A simple and unbeatable tic tac toe game that uses the Minimax algorithm(AI) to play intelligently.</p>
+                        </div>
+
+                        <div class="link-box">
+                            <a class="popup-modal-dismiss">Close</a>
+                        </div>
+
+                    </div>
+                    <!-- modal-04 End -->
+
+                </div>
+                <!-- row End -->
+
+    </section>
+    <!-- Portfolio Section End-->
 
     <!-- Contact Section
    ================================================== -->
