--- a/index.html
+++ b/index.html
@@ -107,8 +107,7 @@
             <p>
                 I love working for product-based companies, mainly startups - helping people materialize their ideas
                 with my ability to code and build applications as well as their infrastructure from scratch.
-                My industrial experience involves 3+ years of the development of innovative and highly functional Web and
-                Android applications as well
+                My industrial experience involves 3+ years of the development of innovative and highly functional Web applications as well
                 as their deployment and maintenance. I am well versed in Python + Django, Javascript +
                 Jquery, HTML5/CSS3, Java and Android . Having developed several Django and Java web applications from scratch and setting
                 up servers running Apache Tomcat, NGINX, Gunicorn and Supervisor, I have also deployed them on cloud
